--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,15 @@
     </properties>
 
     <dependencyManagement>
+    	<dependencies>
+    		<!-- 单元测试 -->
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.5</version>
+				<scope>test</scope>
+			</dependency>
+    	</dependencies>
     </dependencyManagement>
 
 
