--- a/java-httplient-18k-basic/pom.xml
+++ b/java-httplient-18k-basic/pom.xml
@@ -14,6 +14,24 @@
     <artifactId>java-httplient-18k-basic</artifactId>
     <packaging>jar</packaging>
    <dependencies>
+   		<!-- LOG4J日志记录 -->
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-log4j12</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>log4j</groupId>
+				<artifactId>log4j</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+			</dependency>
+			
 		<!-- 单元测试 -->
 			<dependency>
 				<groupId>junit</groupId>
